--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="app/css/style.css" />
+    <link rel="stylesheet" href="./app/css/style.css" />
   </head>
   <body>
     <header>
@@ -33,6 +33,6 @@
         <h4>Page by Monica Vaz</h4>
     </footer> -->
 
-    <script src="app/js/script.js"></script>
+    <script src="./app/js/script.js"></script>
   </body>
 </html>
