--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lista de Tarefas</title>
     <link rel="stylesheet" href="./app/css/style.css" />
   </head>
   <body>
     <header>
-      <h1>To Do List</h1>
+      <h1>Lista de Tarefas</h1>
     </header>
     <section>
       <div class="container">
-        <h2 id="title">ADD TASK</h2>
-        
-        <form action="" id="addForm">
+        <form action="" id="addForm" autocomplete="off">
           <input
             type="text"
             name="input"
             id="task"
-            placeholder="Insert task here"
+            placeholder="Digite aqui sua tarefa"
+            maxlength="70"
           />
-          <input type="submit" value="+" id="submit"/>
+          <input type="submit" value="+" id="submit" class="btn"/>
         </form>
-        <ul id="taskList">
-        </ul>
-        <button type="reset" id="resetBtn">Clear</button>
+        <ul id="taskList"></ul>
+        <button type="reset" id="resetBtn" class="btn">LIMPAR</button>
       </div>
     </section>
-    <!-- <footer>
-        <h4>Page by Monica Vaz</h4>
-    </footer> -->
-
+    <footer>
+        <h4>Página criada por <a href="">Monica Vaz</a>.</h4>
+    </footer>
     <script src="./app/js/script.js"></script>
   </body>
 </html>
