--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Tarefas</title>
+    <link rel="icon" href="./app/assets/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;500&family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+    rel="stylesheet"
+    href="./app/css/font-awesome.min.css" 
+  />
     <link rel="stylesheet" href="./app/css/style.css" />
   </head>
   <body>
@@ -18,17 +29,17 @@
             type="text"
             name="input"
             id="task"
-            placeholder="Digite aqui sua tarefa"
-            maxlength="70"
+            placeholder="DIGITE AQUI SUA TAREFA"
+            maxlength="45"
           />
-          <input type="submit" value="+" id="submit" class="btn"/>
+          <input type="submit" value="+" id="submit" class="btn" />
         </form>
         <ul id="taskList"></ul>
         <button type="reset" id="resetBtn" class="btn">LIMPAR</button>
       </div>
     </section>
     <footer>
-        <h4>Página criada por <a href="">Monica Vaz</a>.</h4>
+      <h4>Página criada por <a href="">Monica Vaz</a>.</h4>
     </footer>
     <script src="./app/js/script.js"></script>
   </body>
