--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Tarefas</title>
+
     <link rel="icon" href="./app/assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,16 +13,18 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;500&family=Patrick+Hand&display=swap"
       rel="stylesheet"
     />
-    <link
-    rel="stylesheet"
-    href="./app/css/font-awesome.min.css" 
-  />
+    <script
+      src="https://kit.fontawesome.com/9998463f15.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./app/css/style.css" />
   </head>
+
   <body>
     <header>
       <h1>Lista de Tarefas</h1>
     </header>
+
     <section>
       <div class="container">
         <form action="" id="addForm" autocomplete="off">
@@ -38,9 +41,15 @@
         <button type="reset" id="resetBtn" class="btn">LIMPAR</button>
       </div>
     </section>
+
     <footer>
-      <h4>Página criada por <a href="">Monica Vaz</a>.</h4>
+      <h4>
+        Página criada por
+        <a href="https://github.com/whosMonica">Monica Vaz</a>.
+      </h4>
     </footer>
+    
     <script src="./app/js/script.js"></script>
   </body>
+
 </html>
