--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <footer>
       <h4>
         Página criada por
-        <a href="https://github.com/whosMonica">Monica Vaz</a>.
+        <a href="https://github.com/M0nicaVaz">Monica Vaz</a>.
       </h4>
     </footer>
     
