LOCAL STORAGE IMPROVEMENT DONE

--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
     <footer>
       <h4>
         Página criada por
-        <a href="https://github.com/M0nicaVaz">Monica Vaz</a>.
+        <a href="https://github.com/M0nicaVaz" target="blank">Monica Vaz</a>.
+      </h4>
+      <h4>
+        Forked by
+        <a href="https://github.com/fcms14" target="blank">fcms14</a>.
       </h4>
     </footer>
     
     <script src="./app/js/script.js"></script>
+    
   </body>
 
 </html>
